# packa

./: .dockerignore  .gitignore  .packa.example.toml.swp  CLAUDE.md  DEAD_CODE_CLEANUP.md  Dockerfile  LICENSE  README.md  SECURITY_FIXES.md  SECURITY_FIXES_ADDENDUM.md  docker-compose.worker.yml  docker-compose.yml  entrypoint.sh  master.example.toml  packa.example.toml  packa.minimal.example.toml  packa.slim.example.toml  packa.worker.toml  pyproject.toml  requirements.txt  slave.db  slave.example.toml
.claude/: settings.local.json
.gitea/workflows/: build.yml
.github/workflows/: build.yml
Docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: api.md  architecture.md  configuration.md  ui.md
k8s/: README.md  configmap.yaml  kustomization.yaml  namespace.yaml  secret.yaml
k8s/base/: kustomization.yaml
k8s/master/: rbac.yaml  secret-bootstrap.yaml  service-lb.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
k8s/web/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
k8s/worker/: service.yaml  (+1 more)
master/: api.py  config_store.py  database.py  master.py  petnames.py  registry.py  scanner.py  sender.py  settings.py  tls_manager.py
packa/: cli.py
shared/: base.py  config.py  crud.py  db.py  log.py  models.py  pki.py  schemas.py  tls.py  version.py
slave/: api.py  database.py  identity.py  main.py  poller.py  settings.py  state.py  store.py  worker.py
web/: app.py  client.py  config.py  main.py  store.py
worker/: api.py  config_store.py  database.py  identity.py  main.py  poller.py  settings.py  state.py  store.py  worker.py
(+12 files in other folders)
